# MKF

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  BUILD.md  CAPABILITIES.md  CMakeLists.txt  CMakePresets.json  Doxyfile  FALLBACKS_REVIEW.md  FOLLOWUPS.md  HANDOFF.md  HANDOFF_CONVERTER_FRONTEND_REPRO.md  HANDOFF_FAST_PATH_GAPPING.md  HANDOFF_HEAVY_TEST_GAPS.md  LICENSE.md  MAS.hpp  NEXT_SESSION_HANDOFF.md  PSMA_SCHEMA_FAMILY_REVIEW.md  README.md  REAL_WINDING_INVESTIGATION.md  coverage_filtered.info  mkdocs.yml  norwe_bobbins.ndjson  package-lock.json  read_pdf.py  read_pdf2.py  remove_debug.py  requirements-docs.txt  requirements.txt  setup.py  test_coupling.sp  test_coupling4.sp  test_pushpull_fixed_duty.cpp
.github/workflows/: ci.yml  docs.yml
.playwright-mcp/: custom_magnetic.json  page-2026-04-12T14-31-53-352Z.yml  page-2026-04-12T14-32-09-802Z.yml  page-2026-04-12T14-32-16-276Z.yml  page-2026-04-12T14-32-38-646Z.yml  page-2026-04-12T14-33-16-710Z.yml  page-2026-04-12T14-33-34-974Z.yml  page-2026-04-12T14-51-55-359Z.yml  page-2026-04-12T14-52-48-911Z.yml  page-2026-04-12T15-07-02-240Z.yml  page-2026-04-12T18-27-35-002Z.yml  page-2026-04-12T18-42-21-870Z.yml  page-2026-04-12T19-18-42-071Z.yml  page-2026-04-12T19-40-28-330Z.yml  page-2026-04-12T19-40-59-562Z.yml  page-2026-04-12T20-13-50-286Z.yml  page-2026-04-12T20-46-08-720Z.yml  page-2026-04-13T12-05-16-222Z.yml  page-2026-04-13T12-06-48-371Z.yml  page-2026-04-13T12-07-21-626Z.yml  page-2026-04-13T12-07-38-501Z.yml  page-2026-04-13T12-10-32-374Z.yml  page-2026-04-15T21-17-25-529Z.yml  page-2026-04-15T21-17-37-499Z.yml  page-2026-04-15T21-17-46-376Z.yml  page-2026-04-15T21-17-58-974Z.yml  page-2026-04-15T21-18-14-507Z.yml  page-2026-04-15T21-18-30-551Z.yml  page-2026-04-15T21-18-45-996Z.yml  page-2026-04-15T21-19-36-225Z.yml  page-2026-04-15T21-20-20-832Z.yml  page-2026-04-15T21-22-24-982Z.yml  page-2026-04-16T11-17-58-669Z.yml  page-2026-04-16T11-18-10-823Z.yml  page-2026-04-16T11-18-20-848Z.yml  page-2026-04-16T11-18-27-939Z.yml  page-2026-04-16T11-37-39-156Z.yml  page-2026-04-16T11-40-05-580Z.yml  page-2026-04-16T11-47-23-725Z.yml  page-2026-04-16T11-48-00-209Z.yml  (+17 more)
coverage_html/: cmd_line  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage_html/src/: Constants.h.func-c.html  Constants.h.func.html  Constants.h.gcov.html  Defaults.h.func-c.html  Defaults.h.func.html  Defaults.h.gcov.html  Definitions.h.func-c.html  Definitions.h.func.html  Definitions.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
docs/: core_adviser.md  index.md
docs/algorithms/: coil-adviser.md  core-adviser.md  magnetic-adviser.md  wire-adviser.md
docs/api/: index.md
docs/articles/: core-losses.md  index.md  reluctance.md
docs/getting-started/: examples.md  installation.md  quick-start.md
docs/javascripts/: mathjax.js
docs/models/: capacitance.md  core-losses.md  index.md  inductance.md  magnetic-field.md  reluctance.md  thermal.md  winding-losses.md
docs/scripts/: extract_model_docs.py  extract_settings.py  generate_substack.py
docs/settings/: reference.md
docs/sprints/: sprint-55-plecs-exporter.md
docs/thermal/: THERMAL_MODEL_DOCUMENTATION.md
examples/: CMakeLists.txt
examples/plecs_export/: CMakeLists.txt  main.cpp
memory/: MEMORY.md  feedback_build.md  feedback_webfrontend.md
scripts/: generate_cci_data.py  setup_and_test.sh
src/: BobbinWrapper.cpp  BobbinWrapper.h  CircuitSimulator.cpp  CircuitSimulatorInterface.cpp  CircuitSimulatorInterface.h  CoilAdviser.cpp  CoilAdviser.h  CoilBreaker.cpp  CoilBreaker.h  CoilMesher.cpp  CoilMesher.h  CoilPainter.cpp  CoilPainter.h  CoilWrapper.cpp  CoilWrapper.h  ComplexPermeability.cpp  ComplexPermeability.h  Constants.h  Core.cpp  Core.h  CoreAdviser.cpp  CoreAdviser.h  CoreCrossReferencer.cpp  CoreCrossReferencer.h  CoreLosses.cpp  CoreLosses.h  CoreMaterialCrossReferencer.cpp  CoreMaterialCrossReferencer.h  CoreTemperature.cpp  CoreTemperature.h  CoreWrapper.cpp  CoreWrapper.h  Defaults.h  Definitions.h  Impedance.cpp  Impedance.h  InitialPermeability.cpp  InitialPermeability.h  InputsWrapper.cpp  InputsWrapper.h  (+60 more)
src/PyMKF/: PyMKFWrapper.cpp  test.py
src/advisers/: CoilAdviser.cpp  CoilAdviser.h  CoreAdviser.cpp  CoreAdviser.h  CoreAdviserDataset.cpp  CoreAdviserFilters.cpp  CoreAdviserGapping.cpp  CoreAdviserInternal.h  CoreAdviserMaterials.cpp  CoreAdviserPipeline.cpp  CoreCrossReferencer.cpp  CoreCrossReferencer.h  CoreMaterialCrossReferencer.cpp  CoreMaterialCrossReferencer.h  CrossReferencerCommon.h  MagneticAdviser.cpp  MagneticAdviser.h  MagneticCombinator.cpp  MagneticCombinator.h  MagneticFilter.cpp  MagneticFilter.h  MagneticFilterAdvanced.cpp  MagneticFilterArea.cpp  (+10 more)
templates/: common_mode_choke.tex  datasheet_template.tex  engineering_report.tex  inductor_datasheet.tex  minimal_template.tex  professional_inductor_datasheet.tex  professional_transformer_datasheet.tex  transformer_datasheet.tex
tests/: ConverterPortChecks.h  Fixtures.cpp  Fixtures.h  KirchhoffNgspiceRunnerShim.cpp  NgspiceTestHelpers.h  PtpHelpers.h  RandomUtils.h  SettingsResetListener.cpp  Test.cpp  TestActiveClampForwardReferenceDesignsPtp.cpp  TestAsymmetricHalfBridgeReferenceDesignsPtp.cpp  TestBobbin.cpp  TestBoostReferenceDesignsPtp.cpp  TestBuckReferenceDesignsPtp.cpp  TestCache.cpp  TestCaches.cpp  TestCircuitSimulator.cpp  TestCircuitSimulatorInterface.cpp  TestCircuitSimulatorInterface.cpp.bak  TestCircuitSimulatorPlecs.cpp  TestCircuitSimulatorReaderRobustness.cpp  TestCllc.cpp  TestCllcKitLossBreakdown.cpp  TestCllcReferenceDesignsPtp.cpp  TestCoil.cpp  TestCoilAdviser.cpp  TestCoilAdviserCharacterisation.cpp  TestCoilPainter.cpp  TestConcurrency.cpp  TestConstants.cpp  TestConverterParasiticComparison.cpp  TestCore.cpp  TestCoreAdviser.cpp  TestCoreAdviserCharacterisation.cpp  TestCoreAdviserIsolatedBuckRepro.cpp  TestCoreCrossReferencer.cpp  TestCoreCrossReferencerCharacterisation.cpp  TestCoreLosses.cpp  TestCoreMaterialCrossReferencer.cpp  TestCoreMaterialCrossReferencerCharacterisation.cpp  (+119 more)
(+1353 files in other folders)
